# rustlink

./: .env  .gitignore  Cargo.toml
migrations/: 20251001135214_create_links_table.sql
src/: lib.rs  main.rs
src/application/: command.rs  mod.rs  service.rs  usecase.rs
src/domain/: errors.rs  link.rs  mod.rs  ports.rs
src/infrastructure/: handlers.rs  mod.rs  repository.rs
