[package]
name = "rustlink"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "auth", "compression-br", "cors", "limit"] }

# Database (PostgreSQL) and Compile-Time Security (A03)
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "postgres", "uuid", "time"] }
dotenvy = "0.15" # To load environment variables

# Logging (A09)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Templating (A08)
askama = "0.12"