[package]
name = "rustlink"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "auth", "compression-br", "cors", "limit"] }

# Database (PostgreSQL) and Compile-Time Security (A03)
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "time",
] }
dotenvy = "0.15" # To load environment variables

# Logging (A09)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Templating (A08)
askama = "0.12"
thiserror = "2.0.17"
rand = "0.8.5"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
argon2 = "0.5.3"
sha2 = "0.10.9"
hex = "0.4.3"
async-trait = "0.1.89"
url = "2.5.7"
serde = "1.0.228"

